public/style.css
/* simple reset */
* {
  box-sizing: border-box;
}

html {
  height: 100%;
  background-repeat: no-repeat;
  background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
}

html,
body,
h1, h2, h3,
p,
label,
form,
button,
input,
textarea,
ul, li,
dl, dt, dd,
div {
  display: block;
  padding: 0;
  margin: 0;
  border: 0;
  font-family: "Roboto", Helvetica, Arial,sans-serif;
  font-size: 16px;
  font-weight: 400;
}

ul,
li {
  list-style-type: none;
}

a {
  color: inherit;
}

input,
textarea {
  border: 0.1em solid #ccc;
  width: 100%;
  font-style: normal;
  font-weight: 100;
  font-size: 1.2em;
  padding: 0.3em;
}

button {
  width: 100%;
  font-size: 1em;
  background-color: rgb(104, 145, 162);
  color: #fff;
  padding: 0.5em 0.3em;
  cursor: pointer;
}

label {
  margin-bottom: 0.5em;
}

h1 {
  font-size: 2em;
  font-weight: 100;
}

/*******************
 * copyright */
.copyright {
  text-align: center;
  font-weight: 400;
  color: #fff;

  position: absolute;
  bottom: 0;
  left: 0;

  width: 100%;
  height: 50px;
}

/*******************
 * login form */
.section-login {
  background-color: #fff;
  width: 20em;
  margin: 6em auto 0;
  padding: 2em 1em;

  /* shadows and rounded borders */
  box-shadow: 0em 1em 2em rgba(0, 0, 0, 0.3);
}

.section-login h1 {
  text-align: center;
  margin-bottom: 1em;
}

/*******************
 * side bar */
.section-sidebar {
  position: absolute;
  top: 0;
  left: 0;

  width: 20em;
  height: 100%;

  padding: 1em;
  z-index: 1;

  color: #fff;
}

.section-sidebar h1 {
  margin-bottom: 1em;
}

.section-sidebar-bg {
  background-color: #000;

  position: absolute;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;

  opacity: 0.7;

  z-index: -1;
}

.section-sidebar ul {
  margin-top: 1em;
}

.section-sidebar li {
  font-size: 1.3em;
}

.section-sidebar li a {
  display: block;
  cursor: pointer;
  padding: 0.5em 0;

  color: #fff;
}

.section-sidebar li a:hover {
  text-decoration: underline;
}

.section-sidebar button {
  border-radius: 1em;
  padding: .5em;
}


/*******************
 * add service form */
.section-add {
  clear: both;
  background-color: #fff;
  width: auto;

  margin: 1em 1em 1em 21em;
  padding: 2em 1em;

  /* shadows and rounded borders */
  box-shadow: 0em 1em 2em rgba(0, 0, 0, 0.3);
}

.section-add h1 {
  margin-bottom: 1em;
}

.section-add button {
  width: 10em;
}

.section-add textarea {
  color: transparent;
  text-shadow: 0 0 1em #000;
}

.section-add textarea:hover {
  text-shadow: 0 0 0 #000;
}

